# docs/apidocs.swagger.json
@@ -147,6 +147,43 @@
         ]
       }
     },
+    "/console/events/{event_id}/sessions/{session_id}": {
+      "delete": {
+        "summary": "Delete a specific session by ID",
+        "operationId": "EventService_DeleteSession",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "event_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "session_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "EventService"
+        ]
+      }
+    },
     "/console/events/{id}": {
       "get": {
         "summary": "Get a single event by ID",
